// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CDropdownDivider customize 1`] = `
<div>
  <hr
    class="dropdown-divider bazinga"
  />
</div>
`;

exports[`loads and displays CDropdownDivider component 1`] = `
<div>
  <hr
    class="dropdown-divider"
  />
</div>
`;
